projects/demo/src/styles.scss
/* You can add global styles to this file, and also import other style files */

@use '../../design/dp-dls-global-angular/styles/global.scss';
@use '../../design/dp-dls-global-angular/styles/fonts.scss';

// @use '@jeppesen-foreflight/dls-global-assets/dist/scss/base/_variables.scss';
// @use '../../design/dp-dls-global-angular/styles/material/core';

body {
  background-color: var(--color-ui-background-lowest);
  font-family: 'Boeing Meso', sans-serif;
}

mat-sidenav-content {
  padding: 1.25rem !important;
}

h6, h5 {
  color: var(--color-ui-textandicon-high);
  margin-bottom: 1rem;
  margin-top: 2rem;
}

p,h1,h2,div {
  color: var(--color-ui-textandicon-high);
}

h1 {
  margin-bottom: 1rem;
  color: var(--color-ui-textandicon-medium);
}

a {
  color: var(--color-ui-textandicon-high);
}

